--- a/newstyles.css
+++ b/newstyles.css
@@ -313,3 +313,12 @@ button:hover {
   text-align: center;
   padding-bottom: 1em;
 }
+
+.phpmessage {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  font-family: "Work Sans", sans-serif;
+  color: #013580;
+}
